Changes by third review